Fix panel margins and modal alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
-.container > * {
+.panel {
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+#loading-modal {
+    text-align: center;
 }
 
 .leaflet-container {
